--- a/index.html
+++ b/index.html
@@ -3,14 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style/style.css">
   <link rel="stylesheet" href="style/normalize.css">
+  <link rel="stylesheet" href="style/style.css">
   <title>board</title>
 </head>
 <body>
   <div class="wrapper">
     <header class="header">
-
+      <div class="container">
+        <nav class="nav-bar">
+          <div class="nav-bar__logo">
+            <img src="assets/logo.svg" alt="" class="nav-bar__logo-img">
+            <span class="nav-bar__logo-text">board</span>
+          </div>
+          <div class="nav-bar__menu">
+            <ul class="nav-bar__menu-list">
+              <li class="nav-bar__menu-item">
+                <a href="#" class="nav-bar__menu-item-link">Products</a>
+              </li>
+              <li class="nav-bar__menu-item">
+                <a href="#" class="nav-bar__menu-item-link">Apps & Games</a>
+              </li>
+              <li class="nav-bar__menu-item">
+                <a href="#" class="nav-bar__menu-item-link">features</a>
+              </li>
+              <li class="nav-bar__menu-item">
+                <a href="#" class="nav-bar__menu-item-link">Support</a>
+              </li>
+              <li class="nav-bar__menu-item">
+                <a href="#" class="nav-bar__menu-item-link">about</a>
+              </li>
+            </ul>
+          </div>
+          <button class="nav-bar__bag-btn">
+            <img src="assets/bag-btn.svg" alt="" class="nav-bar__bag-img">
+          </button>
+        </nav>
+      </div>
     </header>
     <main class="main">
 
