first two section html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,88 @@
       </div>
     </header>
     <main class="main">
-
+      <section class="basic">
+        <div class="container">
+          <div class="basic__wrapper">
+            <div class="basic__textbox">
+              <h1 class="basic__title">Let your mind explore new world</h1>
+              <p class="basic__text">Playing electronic games, whether through consoles, computers, mobile phones or another medium altogether. Gaming is a nuanced term that suggests regular gameplay, possibly as a hobby.</p>
+            </div>
+            <div class="basic__buttons">
+              <!-- будет класс active-btn
+              добавляет анимацию при наведении на кнопку -->
+              <a href="#" class="basic__btn-link">
+                <button class="basic__btn">Buy now</button>
+              </a>
+              <a href="" class="basic__btn-link">
+                <button class="basic__btn">Play now</button>
+              </a>
+            </div>
+            <div class="basic__statistics">
+              <div class="basic__cont-stats">
+                <p class="basic__stat">300+</p>
+                <p class="basic__signature">Unique style</p>
+              </div>
+              <div class="basic__cont-stats">
+                <p class="basic__stat">200+</p>
+                <p class="basic__signature">Project finished</p>
+              </div>
+              <div class="basic__cont-stats">
+                <p class="basic__stat">500+</p>
+                <p class="basic__signature">Happy customer</p>
+              </div>
+            </div>
+            <div class="basic__lane curved">
+              <div class="basic__line-item">
+                <img src="assets/star.svg" alt="" class="basic__line-img">
+                <p class="basic__line-text">Gaming spaning</p>
+              </div>
+              <div class="basic__line-item">
+                <img src="assets/star.svg" alt="" class="basic__line-img">
+                <p class="basic__line-text">Action - packed</p>
+              </div>
+              <div class="basic__line-item">
+                <img src="assets/star.svg" alt="" class="basic__line-img">
+                <p class="basic__line-text">mind - bending</p>
+              </div>
+              <div class="basic__line-item">
+                <img src="assets/star.svg" alt="" class="basic__line-img">
+                <p class="basic__line-text">collection og games</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="favorite-games">
+        <div class="favorite-games__textbox">
+          <h1 class="favorite-games__title">
+            choose your favorite games
+          </h1>
+          <p class="favorite-games__text">
+            Offer sneak peeks and previews of upcoming games, including trailers, screenshots, and information about release.
+          </p>
+        </div>
+        <div class="favorite-games__imgbox">
+          <div class="favorite-games__img-conts">
+            <img src="assets/imgbox1.png" alt="" class="favorite-games__img">
+          </div>
+          <div class="favorite-games__img-conts">
+            <img src="assets/imgbox2.png" alt="" class="favorite-games__img">
+            <img src="assets/imgbox-logo.svg" alt="" class="favorite-games__img-logo">
+          </div>
+          <div class="favorite-games__img-conts">
+            <img src="assets/imgbox3.png" alt="" class="favorite-games__img">
+          </div>
+        </div>
+        <div class="basic__buttons">>
+          <a href="#" class="basic__btn-link">
+            <button class="basic__btn">View All</button>
+          </a>
+          <a href="" class="basic__btn-link">
+            <button class="basic__btn">Play now</button>
+          </a>
+        </div>
+      </section>
     </main>
     <footer class="footer">
 
