first three sections

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   </head>
   <body>
     <div class="wrapper">
+      <div class="header__bg">
+        <img src="assets/basic-bg.png" alt="" class="header__bg-img">
+      </div>
+      <div class="ellipses">
+        <div class="ellipse_1"></div>
+        <div class="ellipse_2"></div>
+        <div class="ellipse_3"></div>
+      </div>
       <header class="header">
         <div class="container">
           <div class="header__wrapper">
@@ -85,7 +93,7 @@
               </div>
             </div>
           </div>
-          <div class="basic__lane curved">
+          <div class="basic__line curved">
             <div class="basic__line-item">
               <img src="assets/star.svg" alt="" class="basic__line-img" />
               <p class="basic__line-text">Gaming spaning</p>
@@ -105,53 +113,72 @@
           </div>
         </section>
         <section class="favorite-games">
-          <div class="favorite-games__textbox">
-            <h1 class="favorite-games__title">choose your favorite games</h1>
-            <p class="favorite-games__text">
-              Offer sneak peeks and previews of upcoming games, including
-              trailers, screenshots, and information about release.
-            </p>
-          </div>
-          <div class="favorite-games__imgbox">
-            <div class="favorite-games__img-conts">
-              <img
-                src="assets/imgbox1.png"
-                alt=""
-                class="favorite-games__img"
-              />
+          <div class="favorite-games__wrapper">
+            <div class="favorite-games__textbox">
+              <h1 class="favorite-games__title">choose your <span class="transparent_text">favorite</span> games</h1>
+              <p class="favorite-games__text">
+                Offer sneak peeks and previews of upcoming games, including
+                trailers, screenshots, and information about release.
+              </p>
             </div>
-            <div class="favorite-games__img-conts">
-              <img
-                src="assets/imgbox2.png"
-                alt=""
-                class="favorite-games__img"
-              />
-              <img
-                src="assets/imgbox-logo.svg"
-                alt=""
-                class="favorite-games__img-logo"
-              />
+            <div class="favorite-games__imgbox">
+              <div class="favorite-games__img-conts">
+                <img
+                  src="assets/imgbox1.png"
+                  alt=""
+                  class="favorite-games__img"
+                />
+              </div>
+              <div class="favorite-games__img-conts center">
+                <img
+                  src="assets/imgbox2.png"
+                  alt=""
+                  class="favorite-games__img"
+                />
+                <img
+                  src="assets/imgbox-logo.svg"
+                  alt=""
+                  class="favorite-games__img-logo"
+                />
+                <p class="favorite-games__img-text">sneak peeks</p>
+              </div>
+              <div class="favorite-games__img-conts">
+                <img
+                  src="assets/imgbox3.png"
+                  alt=""
+                  class="favorite-games__img"
+                />
+              </div>
             </div>
-            <div class="favorite-games__img-conts">
-              <img
-                src="assets/imgbox3.png"
-                alt=""
-                class="favorite-games__img"
-              />
+            <div class="basic__buttons">
+              <a href="#" class="basic__btn-link">
+                <button class="basic__btn">View All</button>
+              </a>
+              <a href="" class="basic__btn-link">
+                <button class="basic__btn">Play now</button>
+              </a>
             </div>
-          </div>
-          <div class="basic__buttons">
-            <a href="#" class="basic__btn-link">
-              <button class="basic__btn">View All</button>
-            </a>
-            <a href="" class="basic__btn-link">
-              <button class="basic__btn">Play now</button>
-            </a>
           </div>
         </section>
         <section class="virtual-reality">
           <div class="container">
             <div class="virtual-reality__wrapper">
+              <div class="virtual-reality__contentbox">
+                <div class="virtual-reality__textbox">
+                  <h1 class="virtual-reality__title">
+                    Discover the <span class="transparent_text">Virtual</span> Reality Gaming
+                  </h1>
+                  <p class="virtual-reality__text">
+                    A well-designed gaming header often incorporates elements such
+                    as game characters, iconic symbols, vibrant colors, and
+                    dynamic visuals to convey excitement, adventure, and the
+                    immersive nature of gaming.
+                  </p>
+                </div>
+                <div class="virtual-reality__btnbox">
+                  <button class="basic__btn">Play now</button>
+                </div>
+              </div>
               <div class="virtual-reality__imgbox">
                 <img
                   src="assets/virtual-reality.svg"
@@ -160,24 +187,8 @@
                 />
               </div>
             </div>
-            <div class="virtual-reality__contentbox">
-              <div class="virtual-reality__textbox">
-                <h1 class="virtual-reality__title">
-                  Discover the Virtual Reality Gaming
-                </h1>
-                <p class="virtual-reality__text">
-                  A well-designed gaming header often incorporates elements such
-                  as game characters, iconic symbols, vibrant colors, and
-                  dynamic visuals to convey excitement, adventure, and the
-                  immersive nature of gaming.
-                </p>
-              </div>
-              <div class="virtual-reality__btnbox">
-                <button class="virtual-reality__btn">Play now</button>
-              </div>
-            </div>
           </div>
-          <div class="basic__lane">
+          <div class="basic__line virtual">
             <div class="basic__line-item">
               <img src="assets/star.svg" alt="" class="basic__line-img" />
               <p class="basic__line-text">Gaming spaning</p>
@@ -402,7 +413,7 @@
               </div>
             </div>
           </div>
-          <div class="basic__lane">
+          <div class="basic__line">
             <div class="basic__line-item">
               <img src="assets/star.svg" alt="" class="basic__line-img" />
               <p class="basic__line-text">Gaming spaning</p>
@@ -540,7 +551,7 @@
               </div>
             </div>
           </div>
-          <div class="basic__lane">
+          <div class="basic__line">
             <div class="basic__line-item">
               <img src="assets/star.svg" alt="" class="basic__line-img" />
               <p class="basic__line-text">Gaming spaning</p>
